# timetable-dhbw-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yaml
src/: error.rs  ical.rs  main.rs  routes.rs
