[package]
name = "timetable-dhbw-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
reqwest = "0.11"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
ical = {version="0.8", features=["ical", "generator"]}
dotenvy_macro = "0.15.7"
