[package]
name = "timetable-dhbw-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6", features=["headers"]}
reqwest = {version="0.11", default_features = false, features=["rustls-tls"]}
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
ical = {version="0.8", features=["ical", "generator"]}
env_logger = "0.10"
log = "0.4"
dotenvy = "0.15.7"
